extracted guideline percentage values to resources set game activity layout dynamically

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,141 +7,183 @@
   android:layout_height="match_parent"
   tools:context=".ui.GameActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recycler_view_game"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:layout_marginTop="8dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textViewGamePlayer4"
-      tools:listitem="@layout/layout_game_6player_listitem"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toStartOf="@+id/guideline03"
-      app:layout_constraintStart_toStartOf="@+id/guideline"
-      app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toStartOf="@+id/guideline05"
-      app:layout_constraintStart_toStartOf="@+id/guideline03"
-      app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer1"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toStartOf="@+id/guideline07"
-      app:layout_constraintStart_toStartOf="@+id/guideline05"
-      app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer2"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer4"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toStartOf="@+id/guideline09"
-      app:layout_constraintStart_toStartOf="@+id/guideline07"
-      app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer3"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer5"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toStartOf="@+id/guideline11"
-      app:layout_constraintStart_toStartOf="@+id/guideline09"
-      app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer4"/>
-    <TextView
-      android:id="@+id/textViewGamePlayer6"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
-      android:layout_marginEnd="2dp"
-      android:text="TextView"
-      android:textAlignment="center"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline11"
-      app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer5"/>
-    <Button
-      android:id="@+id/buttonGameBid"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:layout_marginStart="32dp"
-      android:text="@string/buttonGameBid"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
-    <Button
-      android:id="@+id/buttonGameTricks"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:text="@string/buttonGameTricks"
-      app:layout_constraintStart_toEndOf="@+id/buttonGameBid"
-      app:layout_constraintTop_toTopOf="@+id/buttonGameBid"/>
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.07"/>
-
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline03"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.225"/>
-
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline05"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.38"/>
+  <Button
+    android:id="@+id/buttonGameBid"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="32dp"
+    android:text="@string/buttonGameBid"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <Button
+    android:id="@+id/buttonGameTricks"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:text="@string/buttonGameTricks"
+    app:layout_constraintStart_toEndOf="@+id/buttonGameBid"
+    app:layout_constraintTop_toTopOf="@+id/buttonGameBid"/>
 
 
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline07"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.535"/>
+  <View
+    android:id="@+id/divider_line_game_01"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_01"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
+  <View
+    android:id="@+id/divider_line_game_02"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_02"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
 
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline09"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.69"/>
+  <View
+    android:id="@+id/divider_line_game_03"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_03"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
 
-    <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline11"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.845"/>
+  <View
+    android:id="@+id/divider_line_game_04"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_04"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
+
+  <View
+    android:id="@+id/divider_line_game_05"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_05"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
+
+  <View
+    android:id="@+id/divider_line_game_06"
+    style="@style/divider_line.thick"
+    app:layout_constraintBottom_toTopOf="@id/recycler_view_game"
+    app:layout_constraintEnd_toStartOf="@id/guideline_game_06"
+    app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
+
+  <TextView
+    android:id="@+id/textViewGamePlayer1"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@+id/guideline_game_02"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_01"
+    app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"
+    tools:text="Spieler1"/>
+
+
+  <TextView
+    android:id="@+id/textViewGamePlayer2"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@+id/guideline_game_03"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_02"
+    app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer1"
+    tools:text="Spieler2"/>
+  <TextView
+    android:id="@+id/textViewGamePlayer3"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@+id/guideline_game_04"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_03"
+    app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer2"
+    tools:text="Spieler3"/>
+  <TextView
+    android:id="@+id/textViewGamePlayer4"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@+id/guideline_game_05"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_04"
+    app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer3"
+    tools:text="Spieler4"/>
+  <TextView
+    android:id="@+id/textViewGamePlayer5"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@+id/guideline_game_06"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_05"
+    app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer4"
+    tools:text="Spieler5"/>
+  <TextView
+    android:id="@+id/textViewGamePlayer6"
+    style="player_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="@+id/guideline_game_06"
+    app:layout_constraintTop_toTopOf="@+id/textViewGamePlayer5"
+    tools:text="Spieler6"/>
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recycler_view_game"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/view13"
+    tools:listitem="@layout/layout_game_6player_listitem"/>
+
+  <View
+    android:id="@+id/view13"
+    style="@style/divider_line.thick.horizontal"
+    app:layout_constraintBottom_toTopOf="@+id/recycler_view_game"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/textViewGamePlayer1"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_01"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.07"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_02"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.225"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_03"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.38"/>
+
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_04"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.535"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_05"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.69"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_game_06"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.845"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
