--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".ui.MainActivity">
+
+  <View
+    style="@style/Theme.Red"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    android:layout_height="0dp"
+    android:background="?colorPrimaryDark"
+    app:layout_constraintBottom_toTopOf="@+id/guideline4"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-      android:id="@+id/buttonManagePlayers"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:text="@string/manage_players"
-      app:layout_constraintEnd_toEndOf="@+id/buttonLoadGame"
-      app:layout_constraintStart_toStartOf="@+id/buttonLoadGame"
-      app:layout_constraintTop_toBottomOf="@+id/buttonLoadGame"/>
-
-    <Button
-        android:id="@+id/buttonResumeGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="8dp"
-      android:text="@string/resume_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonNewGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-      android:text="@string/new_game"
-        app:layout_constraintEnd_toEndOf="@+id/buttonResumeGame"
-        app:layout_constraintStart_toStartOf="@+id/buttonResumeGame"
-        app:layout_constraintTop_toBottomOf="@+id/buttonResumeGame" />
-
-    <Button
-        android:id="@+id/buttonStatistics"
-        android:layout_width="112dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-      android:text="@string/statistics"
-        app:layout_constraintEnd_toEndOf="@+id/buttonManagePlayers"
-        app:layout_constraintStart_toStartOf="@+id/buttonManagePlayers"
-        app:layout_constraintTop_toBottomOf="@+id/buttonManagePlayers" />
-  <Button
-    android:id="@+id/buttonLoadGame"
+  <TextView
+    android:id="@+id/textView9"
+    style="@style/h1TextStyle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    android:text="@string/load_game"
-    app:layout_constraintEnd_toEndOf="@+id/buttonNewGame"
-    app:layout_constraintStart_toStartOf="@+id/buttonNewGame"
-    app:layout_constraintTop_toBottomOf="@+id/buttonNewGame"/>
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:text="@string/app_name"
+    app:layout_constraintBottom_toTopOf="@+id/guideline3"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.25"/>
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.5"/>
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0.25"/>
+
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewNewGame"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/guideline3">
+    <TextView
+      android:id="@+id/textView4"
+      style="@style/h2TextStyle"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_gravity="center"
+      android:text="@string/new_game"
+      android:textAlignment="center"
+      android:textAllCaps="true"/>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewResumeGame"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="4dp"
+    app:layout_constraintEnd_toStartOf="@+id/guideline2"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/cardViewNewGame">
+    <TextView
+      android:id="@+id/textView7"
+      style="@style/h2TextStyle"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_gravity="center"
+      android:text="@string/resume_game"
+      android:textAlignment="center"
+      android:textAllCaps="true"/>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewLoadGame"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="@+id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/cardViewNewGame">
+    <TextView
+      android:id="@+id/textView8"
+      style="@style/h2TextStyle"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_gravity="center"
+      android:text="@string/load_game"
+      android:textAlignment="center"
+      android:textAllCaps="true"/>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewManagePlayers"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="4dp"
+    app:layout_constraintEnd_toStartOf="@+id/guideline2"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/cardViewResumeGame">
+    <TextView
+      android:id="@+id/textView5"
+      style="@style/h2TextStyle"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_gravity="center"
+      android:text="@string/manage_players"
+      android:textAlignment="center"
+      android:textAllCaps="true"/>
+  </androidx.cardview.widget.CardView>
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewStatistics"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="@+id/guideline2"
+    app:layout_constraintTop_toBottomOf="@+id/cardViewLoadGame">
+    <TextView
+      android:id="@+id/textView6"
+      style="@style/h2TextStyle"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_gravity="center"
+      android:text="@string/statistics"
+      android:textAlignment="center"
+      android:textAllCaps="true"/>
+  </androidx.cardview.widget.CardView>
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0.3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
