--- a/app/src/main/res/layout/dialog_tricks.xml
+++ b/app/src/main/res/layout/dialog_tricks.xml
@@ -26,19 +26,20 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    style="@style/Theme.Red"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
@@ -69,15 +70,15 @@
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog1"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
@@ -104,19 +105,20 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    style="@style/Theme.Red"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog2"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
@@ -143,19 +145,20 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    style="@style/Theme.Red"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog3"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
@@ -182,19 +185,20 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    style="@style/Theme.Red"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog4"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
@@ -221,19 +225,20 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    style="@style/Theme.Red"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.00"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/numberPickerDialog5"
-    app:np_dividerColor="@color/colorPrimary"
+    app:np_dividerColor="?colorPrimary"
     app:np_formatter="@string/number_picker_formatter"
     app:np_height="@dimen/np_height"
     app:np_max="20"
     app:np_min="0"
     app:np_orientation="horizontal"
-    app:np_selectedTextColor="@color/colorPrimary"
+    app:np_selectedTextColor="?colorPrimary"
     app:np_selectedTextSize="@dimen/selected_text_size"
-    app:np_textColor="@color/colorPrimary"
+    app:np_textColor="?colorPrimary"
     app:np_textSize="@dimen/text_size"
     app:np_typeface="@string/roboto_light"
     app:np_value="@integer/np_value"
