--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#008577</color>
-  <color name="colorPrimaryDark">#00574B</color>
-  <color name="colorAccent">#D81B60</color>
+  <color name="colorRedPrimary">#c61700</color>
+  <color name="colorRedPrimaryLight">#ff5530</color>
+  <color name="colorRedPrimaryDark">#8d0000</color>
+  <color name="colorRedAccent">#D81B60</color>
   <color name="colorHighlightedRow">#757575</color>
   <color name="colorAlternatingRowHighlight">#E0E0E0</color>
   <color name="colorAlternatingRowNormal">#FFFFFF</color>
