--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
 
   <dimen name="selected_text_size">35dp</dimen>
   <dimen name="text_size">30dp</dimen>
+  <dimen name="text_size_h1">25dp</dimen>
+  <dimen name="text_size_h2">22dp</dimen>
+  <dimen name="text_size_h3">18dp</dimen>
   <dimen name="np_height">48dp</dimen>
   <dimen name="np_width">150dp</dimen>
 </resources>
