--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,55 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="Theme.Red" parent="Theme.AppCompat.Light.DarkActionBar">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    <item name="colorAccent">@color/colorAccent</item>
+    <item name="colorPrimary">@color/colorRedPrimary</item>
+    <item name="colorPrimaryDark">@color/colorRedPrimaryDark</item>
+    <item name="colorAccent">@color/colorRedAccent</item>
   </style>
 
-  <style name="AppTheme.NoActionBar">
+  <style name="Theme.Red.NoActionBar">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
+  </style>
+
+  <style name="h1TextStyle">
+    <item name="android:textColor">@android:color/white</item>
+    <item name="android:alpha">0.9</item>
+    <item name="android:textSize">@dimen/text_size_h1</item>
+  </style>
+
+  <style name="h2TextStyle">
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:alpha">0.9</item>
+    <item name="android:textSize">@dimen/text_size_h2</item>
+  </style>
+
+  <style name="player_name">
+    <item name="android:layout_marginTop">8dp</item>
+    <item name="android:layout_marginStart">2dp</item>
+    <item name="android:layout_marginEnd">2dp</item>
+    <item name="android:textAlignment">textStart</item>
+  </style>
+
+  <style name="divider_line">
+  </style>
+
+  <style name="divider_line.thin">
+    <item name="android:layout_width">2dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:background">@android:color/darker_gray</item>
+  </style>
+
+  <style name="divider_line.thick">
+    <item name="android:layout_width">2dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:background">@android:color/black</item>
+  </style>
+
+  <style name="divider_line.thick.horizontal">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">2dp</item>
   </style>
 
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
