--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -72,15 +72,16 @@
     app:layout_constraintEnd_toStartOf="@id/guideline_game_06"
     app:layout_constraintTop_toTopOf="@id/textViewGamePlayer1"/>
 
-  <TextView
-    android:id="@+id/textViewGamePlayer1"
-    style="player_name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toStartOf="@+id/guideline_game_02"
-    app:layout_constraintStart_toStartOf="@+id/guideline_game_01"
-    app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"
-    tools:text="Spieler1"/>
+    <TextView
+        android:id="@+id/textViewGamePlayer1"
+        style="player_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_game_02"
+        app:layout_constraintStart_toStartOf="@+id/guideline_game_01"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGameBid"
+        tools:text="Spieler1" />
 
 
   <TextView
