--- a/app/src/main/res/layout/activity_manage_players.xml
+++ b/app/src/main/res/layout/activity_manage_players.xml
@@ -18,14 +18,16 @@
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fab"
+    style="@style/Theme.Red"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/fab_margin"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_gravity="bottom|end"
+    android:backgroundTint="?colorPrimary"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:srcCompat="@android:drawable/ic_dialog_email"/>
+    app:srcCompat="@drawable/ic_baseline_add_24px"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
