--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,6 @@
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.25"/>
   <androidx.constraintlayout.widget.Guideline
-    android:id="@+id/guideline2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent="0.5"/>
-  <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideline3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -69,9 +63,8 @@
     android:layout_height="100dp"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="4dp"
-    app:layout_constraintEnd_toStartOf="@+id/guideline2"
-    app:layout_constraintHorizontal_bias="0.0"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/cardViewNewGame">
     <TextView
@@ -87,36 +80,13 @@
       android:textAllCaps="true"/>
   </androidx.cardview.widget.CardView>
   <androidx.cardview.widget.CardView
-    android:id="@+id/cardViewLoadGame"
-    android:layout_width="0dp"
-    android:layout_height="100dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="8dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/cardViewNewGame">
-    <TextView
-      android:id="@+id/textView8"
-      style="@style/h2TextStyle"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
-      android:layout_gravity="center"
-      android:text="@string/load_game"
-      android:textAlignment="center"
-      android:textAllCaps="true"/>
-  </androidx.cardview.widget.CardView>
-  <androidx.cardview.widget.CardView
     android:id="@+id/cardViewManagePlayers"
     android:layout_width="0dp"
     android:layout_height="100dp"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="4dp"
-    app:layout_constraintEnd_toStartOf="@+id/guideline2"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/cardViewResumeGame">
     <TextView
@@ -136,11 +106,11 @@
     android:layout_width="0dp"
     android:layout_height="100dp"
     android:layout_marginTop="8dp"
-    android:layout_marginStart="4dp"
+    android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="@+id/guideline2"
-    app:layout_constraintTop_toBottomOf="@+id/cardViewLoadGame">
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/cardViewManagePlayers">
     <TextView
       android:id="@+id/textView6"
       style="@style/h2TextStyle"
