--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,27 +8,25 @@
   tools:context=".ui.GameActivity">
 
   <Button
-      android:id="@+id/buttonGameBid"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="8dp"
-      android:text="@string/buttonGameBids"
-      app:layout_constraintEnd_toStartOf="@+id/guideline_game_04"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+    android:id="@+id/buttonGameBid"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:text="@string/buttonGameBids"
+    app:layout_constraintEnd_toStartOf="@+id/buttonGameTricks"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
   <Button
-      android:id="@+id/buttonGameTricks"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
-      android:text="@string/buttonGameTricks"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/buttonGameBid"
-      app:layout_constraintTop_toTopOf="@+id/buttonGameBid" />
+    android:id="@+id/buttonGameTricks"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    android:text="@string/buttonGameTricks"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/buttonGameBid"
+    app:layout_constraintTop_toTopOf="@+id/buttonGameBid"/>
 
 
   <View
